--- a/resources/scss/Partials/_index.scss
+++ b/resources/scss/Partials/_index.scss
@@ -298,6 +298,7 @@ body>h3 {
             align-items: flex-start;
             justify-content: space-around;
             flex-wrap: wrap;
+            padding: 10px;
         }
     }
 }
