--- a/resources/scss/components/_projectCard.scss
+++ b/resources/scss/components/_projectCard.scss
@@ -8,6 +8,7 @@
     margin-bottom: 10px;
     transition: all 100ms linear;
     transform: scale(1);
+    background-color: white;
     .check_box {
         grid-column: 1/2;
         justify-self: center;
