--- a/public/css/Assets/app.css
+++ b/public/css/Assets/app.css
@@ -168,6 +168,7 @@ div > div .user_card_holder .view_button a {
   margin-bottom: 10px;
   transition: all 100ms linear;
   transform: scale(1);
+  background-color: white;
 }
 .project_card_holder .check_box {
   grid-column: 1/2;
@@ -861,6 +862,83 @@ body > h3 {
 .body-section .content-body .User-form .field-area input {
   border-radius: 5px;
   border: 1px solid grey;
+}
+
+.project-form-body {
+  width: 96%;
+  padding-bottom: 20px;
+  margin: auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+.project-form-body .section-details {
+  width: 100%;
+  height: 500px;
+  display: flex;
+  justify-content: center;
+  background-color: white;
+  margin-bottom: 50px;
+}
+.project-form-body .section-details > div {
+  width: 50%;
+}
+.project-form-body .section-details .section-image {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  padding-top: 20px;
+}
+.project-form-body .section-details .section-image img {
+  width: 80%;
+  border-radius: 5px;
+  margin-bottom: 5px;
+  box-shadow: 0 0 6px #aeaeae;
+}
+.project-form-body .section-details .section-image label {
+  background-color: red;
+}
+.project-form-body .section-details .section-project-details {
+  margin-bottom: 50px;
+  padding-top: 20px;
+}
+.project-form-body .section-details .section-project-details .form-group {
+  margin-bottom: 18px;
+}
+.project-form-body .section-details .section-project-details .form-group label {
+  width: 100%;
+  font-weight: 600;
+  font-size: 1.1em;
+}
+.project-form-body .section-details .section-project-details .form-group input {
+  width: 90%;
+  border-radius: 5px;
+  border: 1px solid #d7d7d7;
+  font-size: 0.95em;
+  color: #5b5b5b;
+}
+.project-form-body .section-description {
+  width: 100%;
+  background-color: white;
+}
+.project-form-body .section-description label {
+  padding-left: 20px;
+  width: 100%;
+  font-weight: 600;
+  font-size: 1.1em;
+  margin-bottom: 10px;
+}
+.project-form-body .section-description textarea {
+  border-radius: 5px;
+  width: 95%;
+  height: 300px;
+  margin-left: 20px;
+}
+.project-form-body .section-skill {
+  width: 100%;
+  height: 200px;
+  background-color: white;
 }
 
 .dashboard-main-section {
