--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -7,6 +7,7 @@
 
 @import "Partials/index";
 @import "Partials/clientDashboardHome";
+@import "Partials/project";
 
 .dashboard-main-section{
     width: 100vw;
