--- a/public/css/Assets/app.css
+++ b/public/css/Assets/app.css
@@ -159,6 +159,82 @@ div > div .user_card_holder .view_button a {
   color: white;
 }
 
+.navigation-section {
+  height: 100%;
+  background-color: #4B4B4B;
+}
+.navigation-section .logo-section {
+  width: 100%;
+  height: 80px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #F67171;
+}
+.navigation-section .logo-section img {
+  height: 70px;
+}
+.navigation-section > p {
+  width: 100%;
+  padding: 10px 0px;
+  text-align: center;
+  font-style: italic;
+  color: white;
+  background-color: #EC5656;
+}
+.navigation-section .navigation-button-section h3 {
+  font-size: 1.23em;
+  color: white;
+  padding: 10px 0px 10px 10px;
+}
+.navigation-section .navigation-button-section .link-section {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+}
+.navigation-section .navigation-button-section .link-section a {
+  width: 100%;
+  display: inline-grid;
+  grid-template-columns: 50px 1fr;
+  margin-bottom: 5px;
+}
+.navigation-section .navigation-button-section .link-section a img, .navigation-section .navigation-button-section .link-section a p {
+  height: 35px;
+  padding: 3px;
+}
+.navigation-section .navigation-button-section .link-section a p {
+  font-size: 1.2em;
+  text-align: left;
+  padding-left: 8px;
+  line-height: 30px;
+  color: white;
+}
+.navigation-section .navigation-button-section .link-section .active-panel {
+  background-color: #E56262;
+}
+
+.panel-heading {
+  width: 100%;
+  height: 60px;
+  background-color: white;
+  margin-bottom: 20px;
+  box-shadow: 0 0 6px grey;
+  display: grid;
+  grid-template-columns: repeat(12, 1fr);
+}
+.panel-heading button {
+  padding: 5px 10px;
+  background-color: red;
+  color: white;
+  border-radius: 5px;
+}
+.panel-heading a {
+  padding: 5px 10px;
+  background-color: red;
+  color: white;
+  border-radius: 5px;
+}
+
 .project_card_holder {
   width: 100%;
   display: grid;
@@ -662,66 +738,11 @@ body > h3 {
   grid-template-columns: 250px 1fr;
   overflow: hidden;
 }
-
-.navigation-section {
-  height: 100%;
-  background-color: #4B4B4B;
-}
-.navigation-section .logo-section {
-  width: 100%;
-  height: 80px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  background-color: #F67171;
-}
-.navigation-section .logo-section img {
-  height: 70px;
-}
-.navigation-section > p {
-  width: 100%;
-  padding: 10px 0px;
-  text-align: center;
-  font-style: italic;
-  color: white;
-  background-color: #EC5656;
-}
-.navigation-section .navigation-button-section h3 {
-  font-size: 1.23em;
-  color: white;
-  padding: 10px 0px 10px 10px;
-}
-.navigation-section .navigation-button-section .link-section {
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-}
-.navigation-section .navigation-button-section .link-section a {
-  width: 100%;
-  display: inline-grid;
-  grid-template-columns: 50px 1fr;
-  margin-bottom: 5px;
-}
-.navigation-section .navigation-button-section .link-section a img, .navigation-section .navigation-button-section .link-section a p {
-  height: 35px;
-  padding: 3px;
-}
-.navigation-section .navigation-button-section .link-section a p {
-  font-size: 1.2em;
-  text-align: left;
-  padding-left: 8px;
-  line-height: 30px;
-  color: white;
-}
-.navigation-section .navigation-button-section .link-section .active-panel {
-  background-color: #E56262;
-}
-
-.body-section {
+.dashboard-main-section .body-section {
   height: 100%;
   overflow: auto;
 }
-.body-section .top-banner {
+.dashboard-main-section .body-section .top-banner {
   position: sticky;
   top: 0px;
   width: 100%;
@@ -731,90 +752,68 @@ body > h3 {
   align-items: center;
   justify-content: space-between;
 }
-.body-section .top-banner h6 {
+.dashboard-main-section .body-section .top-banner h6 {
   width: 200px;
   margin-left: 10px;
   font-size: 1.4em;
   font-weight: bolder;
   color: white;
 }
-.body-section .top-banner form {
+.dashboard-main-section .body-section .top-banner form {
   width: 500px;
   height: 40px;
   display: flex;
   flex-direction: row;
 }
-.body-section .top-banner form input {
+.dashboard-main-section .body-section .top-banner form input {
   width: 300px;
   border-radius: 20px;
   display: inline;
 }
-.body-section .top-banner form button {
+.dashboard-main-section .body-section .top-banner form button {
   padding: 5px 10px;
   background-color: #F67171;
   color: white;
   border-radius: 5px;
   display: inline;
 }
-.body-section .top-banner .icons-section {
+.dashboard-main-section .body-section .top-banner .icons-section {
   width: 90px;
   display: flex;
   align-items: center;
   justify-content: space-around;
   margin-right: 10px;
 }
-.body-section .top-banner .icons-section a {
+.dashboard-main-section .body-section .top-banner .icons-section a {
   border-radius: 5px;
   height: 40px;
   width: 40px;
 }
-.body-section .top-banner .icons-section a img {
+.dashboard-main-section .body-section .top-banner .icons-section a img {
   width: 50px;
   padding: 5px;
 }
-.body-section .top-banner .icons-section a:hover {
+.dashboard-main-section .body-section .top-banner .icons-section a:hover {
   background-color: #F67171;
 }
-.body-section .content-body {
+.dashboard-main-section .body-section .content-body {
   width: 100%;
   padding: 10px 10px 10px 10px;
 }
-.body-section .content-body .panel-heading {
-  width: 100%;
-  height: 60px;
-  background-color: white;
-  margin-bottom: 20px;
-  box-shadow: 0 0 6px grey;
-  display: grid;
-  grid-template-columns: repeat(12, 1fr);
-}
-.body-section .content-body .panel-heading .btn-sect {
-  grid-column: span 2;
+
+.panel-heading > div {
+  grid-column: span 1;
   display: flex;
   align-items: center;
   justify-content: center;
 }
-.body-section .content-body .panel-heading .btn-sect:nth-of-type(2) {
-  grid-column: 11/13;
-}
-.body-section .content-body .panel-heading button {
-  padding: 5px 10px;
-  background-color: red;
-  color: white;
-  border-radius: 5px;
-}
-.body-section .content-body .panel-heading a {
-  padding: 5px 10px;
-  background-color: red;
-  color: white;
-  border-radius: 5px;
-}
-.body-section .content-body .User-form {
+
+.User-form {
   width: 100%;
   display: flex;
   justify-content: space-around;
 }
-.body-section .content-body .User-form > div {
+.User-form > div {
   height: 100%;
   border-radius: 8px;
   box-shadow: 0 0 6px grey;
@@ -822,45 +821,49 @@ body > h3 {
   padding-bottom: 20px;
   background-color: white;
 }
-.body-section .content-body .User-form select {
+.User-form select {
   width: 100%;
   border-radius: 5px;
 }
-.body-section .content-body .User-form .section-1 {
+.User-form .section-1 {
   width: calc(70% - 10px);
 }
-.body-section .content-body .User-form .section-1 h4 {
+.User-form .section-1 h4 {
   font-weight: bold;
   color: white;
   padding: 11px;
   background-color: red;
   font-size: 1.2em;
 }
-.body-section .content-body .User-form .section-2 {
+.User-form .section-2 {
   width: calc(30% - 10px);
 }
-.body-section .content-body .User-form .section-2 h4 {
+.User-form .section-2 h4 {
   font-weight: bold;
   color: white;
   padding: 11px;
   background-color: red;
   font-size: 1.2em;
 }
-.body-section .content-body .User-form .field-area {
+.User-form .field-area {
   width: 90%;
   margin: auto;
   padding-top: 20px;
 }
-.body-section .content-body .User-form .field-area .form-group {
+.User-form .field-area .form-group {
   margin-bottom: 10px;
 }
-.body-section .content-body .User-form .field-area label {
+.User-form .field-area label {
   width: 100%;
   color: grey;
 }
-.body-section .content-body .User-form .field-area input {
+.User-form .field-area input {
   border-radius: 5px;
   border: 1px solid grey;
+}
+
+.content-body .project-set-as-complete-btn {
+  grid-column: 11/13;
 }
 
 .dashboard-main-section {
