--- a/resources/scss/components/Dashboard/_navigationSection.scss
+++ b/resources/scss/components/Dashboard/_navigationSection.scss
@@ -9,6 +9,7 @@
         align-items: center;
         justify-content: center;
         background-color: #F67171;
+        cursor: pointer;
 
         img {
             height: 70px;
