--- a/resources/scss/Partials/_DashboardAccount.scss
+++ b/resources/scss/Partials/_DashboardAccount.scss
@@ -37,6 +37,11 @@
             font-size: 1.2em;
         }
 
+        textarea{
+            width: 100%;
+            border-radius: 5px;
+        }
+
     }
 
     .section-2 {
@@ -71,6 +76,17 @@
             border: 1px solid grey;
         }
     }
+}
+
+.contractor_skill_holder{
+    width: 100%;
+    margin:auto;
+    margin-top: 30px;
+    background-color: red;
+    background-color: white;
+    padding: 20px;
+    border-radius: 5px;
+    box-shadow: 0 0 6px grey;
 }
 
 
