--- a/resources/scss/Partials/_DashboardProject.scss
+++ b/resources/scss/Partials/_DashboardProject.scss
@@ -2,7 +2,11 @@
     .project-set-as-complete-btn{
         grid-column: 11/13;
     }
+    .btn-set-complete-Project{
+        grid-column: 11/13;
+    }
 }
+
 .project-form-body{
     width: 96%;
     padding-bottom: 20px;
@@ -11,12 +15,19 @@
     align-items: center;
     justify-content: center;
     flex-direction: column;
+    background-color: white;
+    border: 1px solid #e3e3e3;
+    label{
+        padding-left: 20px;
+        width: 100%;
+        font-weight: 600;
+        font-size: 1.1em;
+        margin-bottom: 10px;
+    }
     .section-details{
         width: 100%;
-        height: 500px;
         display: flex;
         justify-content: center;
-        background-color: white;
         margin-bottom: 50px;
         &>div{
             width: 50%;
@@ -46,12 +57,28 @@
                     font-weight: 600;
                     font-size: 1.1em;
                 }
-                input{
+                input,select{
                     width: 90%;
                     border-radius: 5px;
                     border: 1px solid #d7d7d7;
                     font-size: 0.95em;
                     color: #5b5b5b;
+                }
+
+            }
+            .period-selector{
+                display: flex;
+                flex-wrap: wrap;
+                justify-content: space-around;
+                label{
+                    width: 100%;
+                }
+                p{
+                    width: 25%;
+                    text-align: center;
+                }
+                input{
+                    width: 20%;
                 }
             }
         }
@@ -59,14 +86,8 @@
     .section-description{
         width: 100%;
         background-color: white;
+        margin-bottom: 20px;
 
-        label{
-            padding-left: 20px;
-            width: 100%;
-            font-weight: 600;
-            font-size: 1.1em;
-            margin-bottom: 10px;
-        }
         textarea{
             border-radius: 5px;
             width: 95%;
@@ -74,14 +95,72 @@
             margin-left: 20px;
         }
     }
-    .section-skill{
+    textarea{
+        display: block;
         width: 100%;
-        height: 200px;
-        background-color: white;
+        border-radius: 5px;
     }
-    //textarea{
-    //    display: block;
-    //    width: 100%;
-    //    border-radius: 5px;
-    //}
+}
+.section-skill{
+    width: 100%;
+    padding-bottom: 10px;
+    margin-bottom: 20px;
+    .skill-input-area{
+        width: 100%;
+        display: flex;
+        align-items: flex-start;
+        margin-bottom: 10px;
+
+        input{
+            width: 200px;
+            height: 40px;
+            margin-right: 10px;
+            border-radius: 5px;
+            margin-left: 15px;
+            padding-left: 5px;
+            border: 1px solid grey;
+        }
+        button{
+            background-color: red;
+            padding: 8px 9px;
+            color: white;
+            border-radius: 5px;
+        }
+    }
+    .skill-lister{
+        width: 100%;
+        display: flex;
+        flex-wrap: wrap;
+        padding-left: 15px;
+        padding-right: 15px;
+        p{
+
+            margin: 0px 5px;
+            background-color: #f36363;
+            border-radius: 15px;
+            padding: 2px 5px 2px 10px;
+            color: white;
+            &:hover{
+                background-color: #bf4545;
+            }
+            span{
+                cursor: pointer;
+                opacity: 0;
+                display: inline-block;
+                width: 16px;
+                height: 16px;
+                font-size: 14px;
+                background-color: red;
+                border-radius: 8px;
+                line-height: 17px;
+                text-align: center;
+                transition: all 200ms linear;
+                &:hover{
+                    opacity: 1;
+                    transition: all 200ms linear;
+
+                }
+            }
+        }
+    }
 }
