--- a/resources/scss/Partials/_index.scss
+++ b/resources/scss/Partials/_index.scss
@@ -1,3 +1,4 @@
+
 nav {
     width: 100%;
     height: 75px;
@@ -212,6 +213,7 @@ body>h3 {
             padding-left: 10px;
             & h5 {
                 color: red;
+                padding-bottom: 10px;
             }
             & select {
                 padding-left: 10px;
@@ -300,5 +302,108 @@ body>h3 {
             flex-wrap: wrap;
             padding: 10px;
         }
+        & .No-data-found{
+            width: 80%;
+            height: 200px;
+            background-color: whitesmoke;
+            box-shadow: 0 0 4px #646464;
+            text-align: center;
+            line-height: 200px;
+            font-size: 2em;
+            color: #696969;
+        }
     }
+    .project-view {
+        width: 80%;
+        h5{
+            font-weight:500;
+            text-decoration: underline;
+            color: #3b3b3b;
+            margin-bottom: 5px;
+            font-size: 1.3em;
+        }
+        .image-viewer{
+            width: 300px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            box-shadow: 0 0 6px grey;
+            margin: auto auto 10px;
+            border-radius: 5px;
+            img{
+                width: 80%;
+            }
+        }
+        .content-viewer{
+            width: 100%;
+            padding: 20px;
+            border-radius: 3px;
+            box-shadow: 0 0 5px #858585;
+            margin-bottom: 20px;
+            ul{
+                padding-left: 20px;
+                margin-bottom: 20px;
+                li{
+                    display: flex;
+                    margin-bottom: 3px;
+                    .heading{
+                        width: 120px;
+                        font-weight: 600;
+                        color: #4f4f4f;
+                    }
+                    .content{
+                        width: calc(100% - 150px);
+                        font-style: italic;
+                        padding-left: 10px;
+                        font-weight: 400;
+                    }
+                }
+            }
+            &>p{
+                color: #515151;
+                font-family: sans-serif;
+            }
+        }
+        .skill-set-view{
+            width: 100%;
+            border-radius: 3px;
+            padding: 20px;
+            box-shadow: 0 0 5px #858585;
+            margin-bottom: 20px;
+            .skill-set-panel{
+                width: 100%;
+                p{
+                    display: inline-block;
+                    padding:1px 15px;
+                    background-color: #ee4343;
+                    border-radius: 15px;
+                    color: white;
+
+                }
+            }
+        }
+        .call-to-action{
+            width: 100%;
+            border-radius: 3px;
+            padding: 20px;
+            box-shadow: 0 0 5px #858585;
+            margin-bottom: 20px;
+            button{
+                display: inline-block;
+                background-color: red;
+                color: white;
+                padding: 5px 15px;
+                border-radius: 3px;
+            }
+            p{
+                color:red;
+            }
+        }
+    }
+}
+
+.card_display_panel{
+    display: flex !important;
+    justify-content: space-around;
+    flex-wrap: wrap;
 }
